--- a/Haikyuu!!.html
+++ b/Haikyuu!!.html
@@ -61,15 +61,15 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/Yū Nishinoya.png" alt="Yū Nishinoya">
+                        <img src="images 2.0/Yū Nishinoya.png" alt="Yū Nishinoya">
                             <div class="desc">Yū Nishinoya from Haikyuu!!</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Toru Oikawa.png" alt="Toru Oikawa">
+                        <img src="images 2.0/Toru Oikawa.png" alt="Toru Oikawa">
                             <div class="desc">Toru Oikawa from Haikyuu!!</div>
                     </div>  
                     <div class="gallery">
-                        <img src="images/Tobio Kageyama.png" alt="Tobio Kageyama">
+                        <img src="images 2.0/Tobio Kageyama.png" alt="Tobio Kageyama">
                             <div class="desc">Tobio Kageyama from Haikyuu!!</div>
                     </div>
                     <div class="gallery">
@@ -85,15 +85,15 @@
                             <div class="desc">Keiji Akaashi from Haikyuu!!</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Ryunosuke Tanaka.jfif" alt="Ryunosuke Tanaka">
+                        <img src="images 2.0/Ryunosuke Tanaka.jfif" alt="Ryunosuke Tanaka">
                             <div class="desc">Ryunosuke Tanaka from Haikyuu!!</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Sugawara.jfif" alt="Sugawara">
+                        <img src="images 2.0/Sugawara.jfif" alt="Sugawara">
                             <div class="desc">Sugawara from Haikyuu!!</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Tetsuro Kuroo.jfif" alt="Tetsuro Kuroo">
+                        <img src="images 2.0/Tetsuro Kuroo.jfif" alt="Tetsuro Kuroo">
                             <div class="desc">Tetsuro Kuroo from Haikyuu!!</div>
                     </div>
                 </div>
