Update Hunter x Hunter.html

--- a/Hunter x Hunter.html
+++ b/Hunter x Hunter.html
@@ -89,7 +89,7 @@
                             <div class="desc">Killua Zoldyck from Hunter x Hunter</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Meruem.jfif" alt="Meruem">
+                        <img src="images 2.0/Meruem.jfif" alt="Meruem">
                             <div class="desc">Meruem from Hunter x Hunter</div>
                     </div>
                 </div>
