--- a/Jujutsu Kaisen.html
+++ b/Jujutsu Kaisen.html
@@ -61,7 +61,7 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/Ryomen Sukuna.png" alt="Ryomen Sukuna">
+                        <img src="images 2.0/Ryomen Sukuna.png" alt="Ryomen Sukuna">
                             <div class="desc">Ryomen Sukuna from Jujutsu Kaisen</div>
                     </div>
                     <div class="gallery">
@@ -69,19 +69,19 @@
                             <div class="desc">Gojo Satoru from Jujutsu Kaisen</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Toji.jfif" alt="Toji">
+                        <img src="images 2.0/Toji.jfif" alt="Toji">
                             <div class="desc">Toji Zenin from Jujutsu Kaisen</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Megumi.jfif" alt="Megumi">
+                        <img src="images 2.0/Megumi.jfif" alt="Megumi">
                             <div class="desc">Megumi fushiguro from Jujutsu Kaisen</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Nobara kugisaki.jfif" alt="Nobara kugisaki">
+                        <img src="images 2.0/Nobara kugisaki.jfif" alt="Nobara kugisaki">
                             <div class="desc">Nobara kugisaki from Jujutsu Kaisen</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/toge inumaki.jfif" alt="Toge Inumaki">
+                        <img src="images 2.0/toge inumaki.jfif" alt="Toge Inumaki">
                             <div class="desc">Toge Inumaki from Jujutsu Kaisen</div>
                     </div>
                     <div class="gallery">
