Update My hero Academia.html

--- a/My hero Academia.html
+++ b/My hero Academia.html
@@ -61,7 +61,7 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/Toya Todoroki.png" alt="Toya Todoroki">
+                        <img src="images 2.0/Toya Todoroki.png" alt="Toya Todoroki">
                             <div class="desc">Toya Todoroki"Dabi" from My Hero Academia</div>
                     </div>
                     <div class="gallery">
@@ -81,23 +81,23 @@
                             <div class="desc">Izuku Midoriya from My Hero Academia</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Shinso Hitoshi.jfif" alt="Shinso Hitoshi">
+                        <img src="images 2.0/Shinso Hitoshi.jfif" alt="Shinso Hitoshi">
                             <div class="desc">Shinso Hitoshi from My Hero Academia</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/shoto todoroki.jfif" alt="Shoto Todoroki">
+                        <img src="images 2.0/shoto todoroki.jfif" alt="Shoto Todoroki">
                             <div class="desc">Shoto Todoroki from My Hero Academia</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Tamaki Amajiki.jfif" alt="Tamaki Amajiki">
+                        <img src="images 2.0/Tamaki Amajiki.jfif" alt="Tamaki Amajiki">
                             <div class="desc">Tamaki Amajiki from My Hero Academia</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/todoroki,deku,bakugo.jfif" alt="Todoroki,Deku,Bakugo">
+                        <img src="images 2.0/todoroki,deku,bakugo.jfif" alt="Todoroki,Deku,Bakugo">
                             <div class="desc">Todoroki,Deku,Bakugo from My Hero Academia</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Tomura Shigaraki.jpg" alt="Tomura Shigaraki">
+                        <img src="images 2.0/Tomura Shigaraki.jpg" alt="Tomura Shigaraki">
                             <div class="desc">Tomura Shigaraki from My Hero Academia</div>
                     </div>
                     <div class="gallery">
