--- a/Naruto Shippuden.html
+++ b/Naruto Shippuden.html
@@ -61,7 +61,7 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/Nara Shikamaru.png" alt="Nara Shikamaru">
+                        <img src="images 2.0/Nara Shikamaru.png" alt="Nara Shikamaru">
                             <div class="desc">Shikamaru Nara from Naruto</div>
                     </div> 
                     <div class="gallery">
@@ -85,15 +85,15 @@
                             <div class="desc">Kid Sasuke Uchiha From Naruto</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Madara Uchiha.jfif" alt="Madara Uchiha">
+                        <img src="images 2.0/Madara Uchiha.jfif" alt="Madara Uchiha">
                             <div class="desc">Madara Uchiha from Naruto</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Minato.jfif" alt="Minato">
+                        <img src="images 2.0/Minato.jfif" alt="Minato">
                             <div class="desc">Minato Namikaze from Naruto</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Shisui uchiha.jfif" alt="Shisui Uchiha">
+                        <img src="images 2.0/Shisui uchiha.jfif" alt="Shisui Uchiha">
                             <div class="desc">Shisui Uchiha from Naruto Shippuden</div>
                     </div>
                     <div class="gallery">
