--- a/One Piece.html
+++ b/One Piece.html
@@ -65,11 +65,11 @@
                             <div class="desc">Kaido from One Piece</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Vinsmoke Sanji.png" alt="Vinsmoke Sanji">
+                        <img src="images 2.0/Vinsmoke Sanji.png" alt="Vinsmoke Sanji">
                             <div class="desc">Vinsmoke Sanji from One Piece</div>
                     </div> 
                     <div class="gallery">
-                        <img src="images/Luffy in Gear 4 BounceMan.jpg" alt="Luffy in Gear 4 BounceMan">
+                        <img src="images 2.0/Luffy in Gear 4 BounceMan.jpg" alt="Luffy in Gear 4 BounceMan">
                             <div class="desc">Monkey D. Luffy Gear 4 BounceMan from One Piece</div>
                     </div> 
                     <div class="gallery">
@@ -89,19 +89,19 @@
                             <div class="desc">Monkey D. Luffy "Gear 5" from One Piece</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/NAMI.jfif" alt="NAMI">
+                        <img src="images 2.0/NAMI.jfif" alt="NAMI">
                             <div class="desc">Nami from One Piece</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Nico Robin.jfif" alt="Nico Robin">
+                        <img src="images 2.0/Nico Robin.jfif" alt="Nico Robin">
                             <div class="desc">Nico Robin from One Piece</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Roronoa Zoro.png" alt="Roronoa Zoro">
+                        <img src="images 2.0/Roronoa Zoro.png" alt="Roronoa Zoro">
                             <div class="desc">Roronoa Zoro from One Piece</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Usopp.jfif" alt="Usopp">
+                        <img src="images 2.0/Usopp.jfif" alt="Usopp">
                             <div class="desc">Usopp from One Piece</div>
                     </div>
                 </div>
