--- a/Solo Leveling.html
+++ b/Solo Leveling.html
@@ -61,27 +61,27 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/Sung Jinwoo.jpg" alt="Sung Jinwoo">
+                        <img src="images 2.0/Sung Jinwoo.jpg" alt="Sung Jinwoo">
                         <div class="desc">Sung Jinwoo From Solo Leveling</div>
                     </div> 
                     <div class="gallery">
-                        <img src="images/sung jinwoo igris.jfif" alt="Sung Jinwoo">
+                        <img src="images 2.0/sung jinwoo igris.jfif" alt="Sung Jinwoo">
                         <div class="desc">Sung Jinwoo From Solo Leveling</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/sung j.jfif" alt="Sung Jinwoo">
+                        <img src="images 2.0/sung j.jfif" alt="Sung Jinwoo">
                         <div class="desc">Sung Jinwoo From Solo Leveling</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/sung jinwoo.jfif" alt="Sung Jinwoo">
+                        <img src="images 2.0/sung jinwoo.jfif" alt="Sung Jinwoo">
                         <div class="desc">Sung Jinwoo From Solo Leveling</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/sung and his shadows.jfif" alt="Sung Jinwoo">
+                        <img src="images 2.0/sung and his shadows.jfif" alt="Sung Jinwoo">
                         <div class="desc">Sung Jinwoo & his shadows From Solo Leveling</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Park Heejin.jfif" alt="Park Heejin">
+                        <img src="images 2.0/Park Heejin.jfif" alt="Park Heejin">
                         <div class="desc">Park Heejin From Solo Leveling</div>
                     </div>
                     <div class="gallery">
