Update That Time I Reincarnated as a Slime.html

--- a/That Time I Reincarnated as a Slime.html
+++ b/That Time I Reincarnated as a Slime.html
@@ -61,7 +61,7 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/Rimuru.png" alt="Rimuru">
+                        <img src="images 2.0/Rimuru.png" alt="Rimuru">
                             <div class="desc">Rimuru Tempest from That Time I Got Reincarnated as a Slime</div>
                     </div>
                     <div class="gallery">
@@ -69,23 +69,23 @@
                             <div class="desc">Diablo from That Time I Got Reincarnated as a Slime</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Millim Nava.jfif" alt="Millim Nava">
+                        <img src="images 2.0/Millim Nava.jfif" alt="Millim Nava">
                             <div class="desc">Millim Nava from That Time I Reincarnated As A Slime</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Rimuru Tempest.jfif" alt="Rimuru Tempest">
+                        <img src="images 2.0/Rimuru Tempest.jfif" alt="Rimuru Tempest">
                             <div class="desc">Rimuru Tempest from That Time I Reincarnated As A Slime</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/tempest rimuru.jfif" alt="Tempest Rimuru">
+                        <img src="images 2.0/tempest rimuru.jfif" alt="Tempest Rimuru">
                             <div class="desc">Tempest Rimuru from That Time I Reincarnated As A Slime</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/tempest.jfif" alt="Tempest Rimuru">
+                        <img src="images 2.0/tempest.jfif" alt="Tempest Rimuru">
                             <div class="desc">Tempest Rimuru from That Time I Reincarnated As A Slime</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/veldora.jfif" alt="Veldora">
+                        <img src="images 2.0/veldora.jfif" alt="Veldora">
                             <div class="desc">Veldora from That Time I Reincarnated As A Slime</div>
                     </div>
                 </div>
