--- a/Tokyo Revengers.html
+++ b/Tokyo Revengers.html
@@ -77,19 +77,19 @@
                             <div class="desc">Kazutora Hanemiya from Tokyo Revengers</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Manjiro Mikey Sano.jfif" alt="Manjiro Sano">
+                        <img src="images 2.0/Manjiro Mikey Sano.jfif" alt="Manjiro Sano">
                             <div class="desc">Manjiro "Mikey" Sano from Tokyo Revengers</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Mitsuya.jfif" alt="Mitsuya">
+                        <img src="images 2.0/Mitsuya.jfif" alt="Mitsuya">
                             <div class="desc">Takashi Mitsuya from Tokyo Revengers</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/shuji hanma.jfif" alt="Shuji Hanma">
+                        <img src="images 2.0/shuji hanma.jfif" alt="Shuji Hanma">
                             <div class="desc">Shuji Hanma from Tokyo Revengers</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Takimechi.jfif" alt="Takimechi">
+                        <img src="images 2.0/Takimechi.jfif" alt="Takimechi">
                             <div class="desc">Hanagaki Takimechi from Tokyo Revengers</div>
                     </div>
                 </div>
