--- a/Wind Breaker.html
+++ b/Wind Breaker.html
@@ -61,19 +61,19 @@
                 <hr width="1517px">
                 <div class="Anime">
                     <div class="gallery">
-                        <img src="images/vinny hong serious.jfif" alt="Vinny Hong">
+                        <img src="images 2.0/vinny hong serious.jfif" alt="Vinny Hong">
                         <div class="desc">Vinny Hong From Wind Breaker</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/yumi lee.jfif" alt="Yumi Lee">
+                        <img src="images 2.0/yumi lee.jfif" alt="Yumi Lee">
                         <div class="desc">Yumi lee From Wind Breaker</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/Shelly.jfif" alt="Shelly">
+                        <img src="images 2.0/Shelly.jfif" alt="Shelly">
                         <div class="desc">Shelly from Wind Breaker</div>
                     </div>
                     <div class="gallery">
-                        <img src="images/minu yoon.jfif" alt="Minu Yoon">
+                        <img src="images 2.0/minu yoon.jfif" alt="Minu Yoon">
                         <div class="desc">Minu Yoon from Wind Breaker</div>
                     </div>
                     <div class="gallery">
